# ChatRipperXX_DOPEMUX

./: .aicommitsrc  .cz.toml  .env.example  .gitattributes  .gitignore  .ruff.toml  AGENTS.md  CLAUDE.md  CLAUDE.md.backup  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GUIDE.md  PROJECT_INSTRUCTIONS.md  PR_PLAN_EXTRACTOR_HARDENING.md  PR_PLAN_WAVE2.md  QUICK_VERIFICATION.py  README.md  SECURITY.md  _apply_moves.sh  agents.md  architecture-comprehensive.md  llm-context.md  llm.md  llms.md  mcp.config.template.json  mkdocs.yml  mypy.ini  package-lock.json  package.json  patch.diff  pyproject.toml  repo_prompt.md  test_integration.py  test_taskmaster.json  test_zen.json
.claude/: CHATX_OPTIMIZATION_SUMMARY.md  SYSTEM_OVERVIEW.md  conport-integration.yaml  mcp-config.json  mcp.config.json  migration_script.py  settings.json  system-validation.py  validate-system.py
.claude/agents/: privacy-guardian.md
.claude/commands/: bootstrap.md  caveat.md  code-search.md  commit-pr.md  complete.md  context7-compare.md  context7-examples.md  context7-ingest.md  context7-search.md  ctx-index-search.md  debug.md  decision.md  diff-proposal.md  followup.md  forensic-validation.md  get-decisions.md  hooks-dashboard.md  implement.md  mem-query.md  mem-search.md  pattern.md  plan-slice.md  plan-tasks.md  plan.md  privacy-scan.md  research.md  retrospect.md  runbook-update.md  scratch.md  search-decisions.md  security-review.md  ship.md  story.md  switch.md  tdd-loop.md  todo-manager.py  todo.md  workflow-end-to-end.md  workflow-summary.md  zen-continue.md  (+1 more)
.claude/dynamic-discovery/: architecture.md  integration-guide.md  loader.py  patterns.yaml  test-loader.py
.claude/hooks/: CHEATSHEET.md  README.md  block-dangerous.py  check-style.sh  context_relevance_filter.py  dashboard.py  post_quality_gate.ps1  post_quality_gate.sh  pre_context_budget.py  pre_tool_guard.py  privacy_validation.py  security_dashboard.py
.claude/mcp/: README.md  __init__.py  config.example.json  loader.py
.claude/monitoring/: config.yaml  performance-tracker.py
.claude/scripts/: context-manager.sh
.claude/templates/: task.md
.claude/todos/: README.md  active.md  backlog.md  completed.md  migration_summary.md
.claude/workflows/: optimized-patterns.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/scripts/: check_docs_updated.py
.github/workflows/: ci.yml  docs-deploy.yml  python-ci.yml  utf8-check.yml
.serena/: project.yml
.serena/memories/: project_overview.md  suggested_commands.md  tech_stack.md
.taskmaster/: CLAUDE.md  config.json  state.json
.taskmaster/docs/: code-review-improvements-prd.md  comprehensive-refactor-prd.txt
.taskmaster/tasks/: tasks.json
archive/CR-XactXtract_git/: FETCH_HEAD  config  index
config/: arch-gates.yml  labels.yml  pre-commit-config.yaml
docs/: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEV_DOCS_CRAWL.yml  README.md  SESSION_SUMMARY.md  acceptance-criteria.md  agent-workflows.md  architecture.md  extractor_readiness.md  implementation-plan.md  implementation.md  index.md  interfaces.md  overview.md  psychology-analysis.md  repo-prompt-xml.md
docs/CR-XactXtract/: CONTRIBUTING.md  llm-context.md
docs/PROJECT_DESIGN_FILES/: placeholders.yml
docs/architecture/: smart-hooks-phase1.md
docs/design/: next.md
docs/development/: contributing.md  developer-guide.md  repo-prompt.md  test-strategy.md
docs/how-to/: instagram-zip.md  iphone-backup.md  pdf-ingestion.md  transcription-local.md
docs/operations/: non-functional-requirements.md  security-threat-model.md
docs/plans/: wave2.md
docs/policy/: code-of-conduct.md  security.md
docs/reference/: changelog.md  faq.md
docs/research/: image-enrichment.md  image-psychology-model-research-plan.md
hooks/: pre-commit
schemas/: chunk.schema.json  enrichment_cu.schema.json  enrichment_message.schema.json  error_rfc7807.schema.json  image_enrichment.schema.json  index.schema.json  message.schema.json  metrics.schema.json  missing_attachments_report.schema.json  redaction_report.schema.json  run_report.schema.json
scripts/: clip_apply_patch.zsh  install-git-hooks.sh  setup_mcp_servers.sh
scripts/ci/: check_utf8.sh
scripts/git-hooks/: install_utf8_hooks.zsh  pre-applypatch
scripts/mcp/: check.sh  mcpctl.py  start.sh  stop.sh
src/chatx/: __init__.py  cli_errors.py  constrained_dynamic_loader.py
tests/: __init__.py  conftest.py  test_differential_privacy.py
tests/cli/: test_error_model.py
tests/fixtures/: __init__.py  imessage_test_data.sql  instagram.py  tiny_heic.py
tests/identity/: test_normalize.py
tests/image_enrich/: test_image_enrichment.py  test_schema_validation.py
tests/imessage/: __init__.py  test_attachment_dedupe_extract.py  test_attachment_hash_meta.py  test_attachment_integration.py  test_attachments_meta.py  test_audit_cli.py  test_backup_attachments_copy.py  test_backup_mode.py  test_backup_transcription.py  test_backup_ux.py  test_body_normalize.py  test_copy_binaries.py  test_db_copy.py  test_dedupe_across_messages.py  test_extract_core.py  test_extraction_integration.py  test_json_output.py  test_missing_attachments_report.py  test_missing_report.py  test_pdf_ingest.py  test_reactions.py  test_reactions_replies_idempotent.py  test_replies.py  (+7 more)
(+205 files in other folders)
